Switch to Azure SQL and implement game lists
