# GameDocumentEngine.Server/Documents/GameController.cs
@@ -1,31 +1,87 @@
 ﻿using GameDocumentEngine.Server.Api;
+using GameDocumentEngine.Server.Data;
+using GameDocumentEngine.Server.Users;
 using Json.Patch;
+using Microsoft.EntityFrameworkCore;
+using System.Security.Claims;
 
 namespace GameDocumentEngine.Server.Documents;
 
 public class GameController : Api.GameControllerBase
 {
-	protected override Task<CreateGameActionResult> CreateGame(CreateGameDetails createGameBody)
+	private readonly IEnumerable<IGameType> gameTypes;
+	private readonly DocumentDbContext dbContext;
+
+	public GameController(IEnumerable<IGameType> gameTypes, Data.DocumentDbContext dbContext)
 	{
-		throw new NotImplementedException();
+		this.gameTypes = gameTypes;
+		this.dbContext = dbContext;
 	}
 
-	protected override Task<ListGamesActionResult> ListGames(int page)
+	protected override async Task<CreateGameActionResult> CreateGame(CreateGameDetails createGameBody)
 	{
-		throw new NotImplementedException();
+		if (!ModelState.IsValid || !gameTypes.Any(gt => gt.Name == createGameBody.Type))
+			return CreateGameActionResult.BadRequest();
+
+		var user = await dbContext.GetCurrentUserOrThrow(User);
+		var game = new GameModel
+		{
+			Name = createGameBody.Name,
+			Type = createGameBody.Type,
+			Players = { new GameUserModel { User = user } },
+		};
+		dbContext.Add(game);
+		await dbContext.SaveChangesAsync();
+		return CreateGameActionResult.Ok(ToGameDetails(game));
 	}
 
-	protected override Task<DeleteGameActionResult> DeleteGame(string gameId)
+	private GameDetailsWithId ToGameDetails(GameModel game) =>
+		new GameDetailsWithId(game.Name,
+			DateTimeOffset.Now, // TODO
+			game.Players.Select(p => p.User.Name),
+			"TODO",
+			game.Id);
+
+	protected override async Task<ListGamesActionResult> ListGames()
 	{
-		throw new NotImplementedException();
+		var games = await (from gameUser in dbContext.GameUsers
+						   where gameUser.User.GoogleNameId == User.GetGoogleNameIdOrThrow()
+						   select gameUser.Game).ToArrayAsync();
+		return ListGamesActionResult.Ok(games.Select(g => new GameSummary(g.Id, g.Name)));
 	}
 
-	protected override Task<GetGameDetailsActionResult> GetGameDetails(string gameId)
+	protected override async Task<DeleteGameActionResult> DeleteGame(Guid gameId)
 	{
-		throw new NotImplementedException();
+		var gameRecord = await (from gameUser in dbContext.GameUsers
+								where gameUser.GameId == gameId && gameUser.User.GoogleNameId == User.GetGoogleNameIdOrThrow()
+								select gameUser.Game).SingleOrDefaultAsync();
+		if (gameRecord == null) return DeleteGameActionResult.NotFound();
+		// TODO - check permissions
+
+		dbContext.Remove(gameRecord);
+		await dbContext.SaveChangesAsync();
+		return DeleteGameActionResult.Ok();
 	}
 
-	protected override Task<PatchGameActionResult> PatchGame(string gameId, JsonPatch patchGameBody)
+	protected override async Task<GetGameDetailsActionResult> GetGameDetails(Guid gameId)
+	{
+		var gameRecord = await (from gameUser in dbContext.GameUsers
+								where gameUser.GameId == gameId && gameUser.User.GoogleNameId == User.GetGoogleNameIdOrThrow()
+								select gameUser.Game)
+			.Include(game => game.Players)
+			.ThenInclude(gu => gu.User)
+			.SingleOrDefaultAsync();
+		if (gameRecord == null) return GetGameDetailsActionResult.NotFound();
+
+		return GetGameDetailsActionResult.Ok(new GameDetails(
+			Name: gameRecord.Name,
+			LastUpdated: DateTimeOffset.Now, //TODO
+			gameRecord.Players.Select(p => p.User.Name),
+			"TODO"
+		));
+	}
+
+	protected override Task<PatchGameActionResult> PatchGame(Guid gameId, JsonPatch patchGameBody)
 	{
 		throw new NotImplementedException();
 	}
